--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1{
-    color:red;
+    color:rgb(0, 255, 136);
     padding: 10px;
 }
 body{
-    background-color: aqua;
+    background-color: rgb(255, 0, 187);
 }
